@@ -6,6 +6,7 @@ import com.github.hokkaydo.eplbot.module.Module;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -32,7 +33,7 @@ public class ConfessionModule extends Module {
 
     @Override
     public List<Command> getCommands() {
-        return List.of(confessionCommand, confessionFollowCommand, clearConfessWarningsCommand);
+        return Collections.singletonList(clearConfessWarningsCommand);
     }
 
     @Override
@@ -40,18 +41,8 @@ public class ConfessionModule extends Module {
         return List.of(processor);
     }
 
-    @Override
-    public void enable() {
-        this.enabled = true;
-        Main.getJDA().addEventListener(getListeners().toArray());
-        Main.getCommandManager().enableGlobalCommands(getCommandAsClass());
-    }
-
-    @Override
-    public void disable() {
-        this.enabled = false;
-        Main.getJDA().removeEventListener(getListeners().toArray());
-        Main.getCommandManager().disableGlobalCommands(getCommandAsClass());
+    public List<Command> getGlobalCommands() {
+        return List.of(confessionCommand, confessionFollowCommand);
     }
 
 }
